move struct Orbit out of StarSystem.h/cpp to its own files
Orbital calculations (e.g., converting between parameterisations,
converting from Keplerian to orbital state parameters, et c. is generally
useful in a space sim.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -108,6 +108,7 @@ noinst_HEADERS = \
 	ModelViewer.h \
 	Object.h \
 	ObjectViewerView.h \
+	Orbit.h \
 	OS.h \
 	PersistSystemData.h \
 	Pi.h \
@@ -252,6 +253,7 @@ pioneer_SOURCES	= \
 	ModManager.cpp \
 	ModelViewer.cpp \
 	ObjectViewerView.cpp \
+	Orbit.cpp \
 	Pi.cpp \
 	Planet.cpp \
 	Player.cpp \
